# dsfmt

./: ARCHITECTURE.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  parser.rs  printer.rs  tests.rs
tests/fixtures/: complex.html  form.tsx  many_attrs.html  simple.html  slider.tsx
